fixed HTML5-related issues - social buttons

--- a/app/views/layouts/_followus.html.erb
+++ b/app/views/layouts/_followus.html.erb
@@ -11,9 +11,9 @@
 	end
 %>
 <ul class="social-list-link">
-	<a target="_blank" href="<%= link_twitter %>" title="<%= t('share_twitter') %>"><li class="twitter"></li></a>
-	<a target="_blank" href="<%= link_facebook %>" title="<%= t('share_facebook') %>"><li class="facebook"></li></a>
-	<a target="_blank" href="<%= link_gplus %>" title="<%= t('share_gplus') %>"><li class="gplus"></li></a>
+	<li class="twitter"><a target="_blank" href="<%= link_twitter %>" title="<%= t('share_twitter') %>" style="display: block;"></a></li>
+	<li class="facebook"><a target="_blank" href="<%= link_facebook %>" title="<%= t('share_facebook') %>" style="display: block;"></a></li>
+	<li class="gplus"><a target="_blank" href="<%= link_gplus %>" title="<%= t('share_gplus') %>" style="display: block;"></a></li>
 	<% if footer %>
 		<a target="_blank" href="https://github.com/W3CBrasil" title="GitHub"><li class="github"></li></a>
 	<% end %>
