fixed HTML5-related issues - social buttons again

--- a/app/views/layouts/_followus.html.erb
+++ b/app/views/layouts/_followus.html.erb
@@ -11,10 +11,10 @@
 	end
 %>
 <ul class="social-list-link">
-	<li class="twitter"><a target="_blank" href="<%= link_twitter %>" title="<%= t('share_twitter') %>" style="display: block;"></a></li>
-	<li class="facebook"><a target="_blank" href="<%= link_facebook %>" title="<%= t('share_facebook') %>" style="display: block;"></a></li>
-	<li class="gplus"><a target="_blank" href="<%= link_gplus %>" title="<%= t('share_gplus') %>" style="display: block;"></a></li>
+	<li class="twitter"><a target="_blank" href="<%= link_twitter %>" title="<%= t('share_twitter') %>"></a></li>
+	<li class="facebook"><a target="_blank" href="<%= link_facebook %>" title="<%= t('share_facebook') %>"></a></li>
+	<li class="gplus"><a target="_blank" href="<%= link_gplus %>" title="<%= t('share_gplus') %>"></a></li>
 	<% if footer %>
-		<a target="_blank" href="https://github.com/W3CBrasil" title="GitHub"><li class="github"></li></a>
+		<li class="github"><a target="_blank" href="https://github.com/W3CBrasil" title="GitHub"></a></li>
 	<% end %>
 </ul>
