--- a/app/views/articles/filter.html.erb
+++ b/app/views/articles/filter.html.erb
@@ -23,7 +23,7 @@
                   </li>
               <% end %>
             <% else %>
-            <li><span class="category"><%= t('no_articles_found') %></span></li>
+            <li><span class="category"><%= t('article_not_found') %></span></li>
           <% end %>
             </ul>
           </div>
