added images alt text, tries to extract browsers locale before falling back to default locale

--- a/app/views/pages/become_contributor.html.erb
+++ b/app/views/pages/become_contributor.html.erb
@@ -20,13 +20,13 @@
         <div class="grid-100">
 
           <div class="grid-33">
-            <figure class="figure-partner"><img src="<%= asset_path 'card1.jpg' %>" width="200" alt="Share Knowledge"></figure>
+            <figure class="figure-partner"><img src="<%= asset_path 'card1.jpg' %>" width="200" alt="<%= t('imgalt_share_knowledge') %>"></figure>
           </div>
           <div class="grid-33">
-            <figure class="figure-partner"><img src="<%= asset_path 'card2.jpg' %>" width="200" alt="Linked Data"></figure>
+            <figure class="figure-partner"><img src="<%= asset_path 'card2.jpg' %>" width="200" alt="<%= t('imgalt_linked_data') %>"></figure>
           </div>
           <div class="grid-33">
-            <figure class="figure-partner"><img src="<%= asset_path 'card3.jpg' %>" width="200" alt="Linked Web"></figure>
+            <figure class="figure-partner"><img src="<%= asset_path 'card3.jpg' %>" width="200" alt="<%= t('imgalt_linked_web') %>"></figure>
           </div>
 
           <div class="grid-100">
