--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -47,5 +47,6 @@
   </div>
   <footer class="mainfooter">
     <%= link_to image_tag('logo.png', alt: t('platform_name')), {controller: "home", action: "index"} %>
-    <p class="floatRight">© 2014 <%= t('platform_name') %> - All Rights Reserved.</p>
+    <p class="floatRight">© 2014 <%= t('platform_name') %> - <%= t('part_of').mb_chars.upcase + "  " %>
+      <%= link_to image_tag('logo-od4d-dev.png', alt: 'OD4D Network'), 'http://www.od4d.net', target: '_blank' %></p>
   </footer>
