fix W3CBrasil/OD4D#74 - pairing w/ @alvarocavalcanti

--- a/app/views/casein/posts/_table.html.erb
+++ b/app/views/casein/posts/_table.html.erb
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover table-condensed">
 	<thead>
 		<tr>
-			<th><%= casein_sort_link "ID", :post_id %></th>
+			<th><%= casein_sort_link "ID", :id %></th>
 			<th><%= casein_sort_link "Data", :pub_date %></th>
 			<th><%= casein_sort_link "Título", :title %></th>
 			<th><%= casein_sort_link "Autor", :author %></th>
