--- a/app/views/pages/_ppolicy_pt.html.erb
+++ b/app/views/pages/_ppolicy_pt.html.erb
@@ -1,50 +1,23 @@
-POLITICA DE PRIVACIDADE DA PLATAFORMA
-OD4D – OPEN DATA FOR DEVELOPMENT
-
-O W3C Brasil respeita a privacidade de todos os usuários da Plataforma OD4D e sabe o quanto é importante para o usuário conhecer e estar seguro sobre a utilização dos seus dados pessoais. 
-
-Assim, recomendamos a leitura desta política de privacidade para que você possa compreender nossa abordagem em relação ao uso de seus dados pessoais.
-	
-1. Qual o objetivo desta política de privacidade?
- 
-Esta política de privacidade tem por objetivo informar o usuário sobre o tratamento das informações coletadas durante a sua visita e/ou utilização da Plataforma OD4D.
-
-2. Quem é responsável pelas informações pessoais coletadas na Plataforma OD4D? 
-
-Os dados cadastrais dos usuários serão controlados e protegidos pelo W3C Brasil.
-
-3. Qual a finalidade da coleta de dados?
-
-O W3C Brasil respeita a privacidade do usuário e só usará os dados cadastrais do usuário para uma única finalidade, que é o registro e identificação do usuário na Plataforma OD4D.
-
-O W3C Brasil ressalta que em hipótese alguma os dados coletados no ato do registro do usuário na Plataforma OD4D serão comercializados, transferidos a terceiros, utilizados para fins de marketing direto ou para qualquer outra finalidade. 
-
-4. Coleta de informações não-pessoais:
-
-Além dos dados informados no ato do cadastro, poderão ser coletadas automaticamente informações não-pessoais sobre o usuário, como o tipo de browser da Internet que utiliza ou o site a partir do qual foi direcionado ao nosso, entre outras informações técnicas. 
-
-5. Segurança dos dados pessoais: 
-
-O W3C Brasil envidará todos os esforços para garantir a proteção dos dados pessoais dos usuários da Plataforma OD4D, utilizando tecnologias e políticas objetivando a privacidade e proteção dos dados dos usuários contra o acesso não autorizado e o uso indevido.
-
-Uso de informações pessoais enviadas a outros sites da Web: 
-
-Na Plataforma OD4D poderá constar links para outros sites, no entanto, o W3C Brasil ressalta que não se responsabiliza pelas políticas de privacidade e práticas de outros sites.
-
-Recomendamos verificar a política de cada site visitado para entender melhor seus direitos e obrigações, especialmente quando enviar qualquer tipo de conteúdo por sites de terceiros. 
-
-Política de cookies: 
-
-Usamos o termo "cookies" para referência a cookies e outras tecnologias semelhantes sobre a privacidade nas comunicações eletrônicas.
-
-Cookies são pequenos arquivos de texto enviados ao seu computador, armazenados pelo mesmo. Estes pequenos arquivos servem para reconhecer, acompanhar e armazenar a navegação do usuário na Plataforma OD4D.
-
-Alterações nesta política 
-
-O W3C Brasil poderá fazer alterações nesta política de privacidade, caso em que será publicado na Plataforma OD4D. O usuário deve consultar esta política de privacidade regularmente.
-
-Nota especial (se você for menor de 18 anos de idade) 
-
-•	Nosso site não é destinado a pessoas menores de 18 anos de idade.
-
-•	Caso o Usuário seja um menor de idade, para poder acessar e/ou utilizar os Serviços, o mesmo deverá obter autorização de seus pais, tutores ou representante legal, a fim de permitir seu acesso e/ou utilização aos Serviços da Plataforma, tornando-se plenamente responsáveis quanto a todos os atos praticados pelo menor, assim como quanto aos conteúdos e serviços acessados e/ou utilizados pelo menor.
+<div>
+<p>O W3C Brasil respeita a privacidade de todos os usuários da Plataforma OD4D e sabe o quanto é importante para o usuário conhecer e estar seguro sobre a utilização dos seus dados pessoais.</p>
+<p>Assim, recomendamos a leitura desta política de privacidade para que você possa compreender nossa abordagem em relação ao uso de seus dados pessoais.</p>
+<p><strong>1. Qual o objetivo desta política de privacidade?</strong></p>
+<p>Esta política de privacidade tem por objetivo informar o usuário sobre o tratamento das informações coletadas durante a sua visita e/ou utilização da Plataforma OD4D.</p>
+<p><strong>2. Quem é responsável pelas informações pessoais coletadas na Plataforma OD4D?</strong></p>
+<p>Os dados cadastrais dos usuários serão controlados e protegidos pelo W3C Brasil.</p>
+<p><strong>3. Qual a finalidade da coleta de dados?</strong></p>
+<p>O W3C Brasil respeita a privacidade do usuário e só usará os dados cadastrais do usuário para uma única finalidade, que é o registro e identificação do usuário na Plataforma OD4D.</p>
+<p>O W3C Brasil ressalta que em hipótese alguma os dados coletados no ato do registro do usuário na Plataforma OD4D serão comercializados, transferidos a terceiros, utilizados para fins de marketing direto ou para qualquer outra finalidade.</p>	
+<p><strong>4. Coleta de informações não-pessoais:</strong></p>
+<p>Além dos dados informados no ato do cadastro, poderão ser coletadas automaticamente informações não-pessoais sobre o usuário, como o tipo de browser da Internet que utiliza ou o site a partir do qual foi direcionado ao nosso, entre outras informações técnicas.</p>	
+<p><strong>5. Segurança dos dados pessoais:</strong></p>	
+<p>O W3C Brasil envidará todos os esforços para garantir a proteção dos dados pessoais dos usuários da Plataforma OD4D, utilizando tecnologias e políticas objetivando a privacidade e proteção dos dados dos usuários contra o acesso não autorizado e o uso indevido.</p>
+<p><strong>Uso de informações pessoais enviadas a outros sites da Web:</strong></p>	
+<p>Na Plataforma OD4D poderá constar links para outros sites, no entanto, o W3C Brasil ressalta que não se responsabiliza pelas políticas de privacidade e práticas de outros sites.</p>
+<p>Recomendamos verificar a política de cada site visitado para entender melhor seus direitos e obrigações, especialmente quando enviar qualquer tipo de conteúdo por sites de terceiros.</p>
+<p><strong>Política de cookies:</strong></p>	
+<p>Usamos o termo "cookies" para referência a cookies e outras tecnologias semelhantes sobre a privacidade nas comunicações eletrônicas.</p>
+<p>Cookies são pequenos arquivos de texto enviados ao seu computador, armazenados pelo mesmo. Estes pequenos arquivos servem para reconhecer, acompanhar e armazenar a navegação do usuário na Plataforma OD4D, somente quando o usuário estiver conectado com usuário e senha da Plataforma.</p>	
+<p><strong>Alterações nesta política</strong></p>
+<p>O W3C Brasil poderá fazer alterações nesta política de privacidade, caso em que será publicado na Plataforma OD4D. O usuário deve consultar esta política de privacidade regularmente.</p>	
+</div>
